Details
-
Bug
-
Resolution: Fixed
-
P5: Not important
-
5.15, 6.x
-
-
2022wk20FOAndroid&Automotive, 2022wk22FOQtforAndroid, 2022wk24FOQtforAndroid, 2022wk26FOQtforAndroid, 2022wk28FOQtforAndroid
Description
Mandelbrot example is tagged with iOS tag but cannot be zoom with it.
Zooming is crucial part of the example.
Attachments
Issue Links
- relates to
-
QTBUG-102544 iOS keyboard appears without a reason on app start
- Closed